kubernetes/portfolio-service.yml
apiVersion: v1
kind: Service
metadata:
  name: garu-portfolio-service
  namespace: personal
spec:
  type: NodePort
  ports:
    - name: nginx
      protocol: TCP
      port: 80
      targetPort: 80

  selector:
    app: garu-portfolio
    tier: frontend
